turtleart.kerr40.Kerr40.scala.error
Compilation error:
Kerr40:28: error: value right is not a member of Unit
  forward(30) right(90) forward(30)
              ^